# mimir-cardinality-analyzer

./: Cargo.toml  Dockerfile  README.md
.github/: CODEOWNERS
.github/workflows/: build.yaml  helm.yaml  image.yaml
dashboards/: internal.json  labels.json  metrics.json  overview.json
helm/mimir-cardinality-analyzer/: Chart.yaml  values.yaml
helm/mimir-cardinality-analyzer/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
src/: config.rs  exporter.rs  grafana.rs  http.rs  lib.rs  main.rs  metrics.rs  mimir.rs
src/grafana/: alert.rs  datasource.rs
src/metrics/: analysis.rs  external.rs  http.rs  process.rs
src/mimir/: cardinality.rs
