[package]
name = "mimir-cardinality-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_norway = "0.9"
anyhow = { version = "1.0" }
axum = { version = "0.8" }
axum-server = { version = "0.7" }
hyper = "=1.7.0"
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace", "map-request-body", "util"] }
http = { version = "1.2" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
reqwest-tracing = "0.5"
scraper = "0.24.0"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
once_cell = "1.21"
regex = "1.12"
openssl = { version = "0.10", features = ["vendored"], optional = true }
